# Exploring-Near-Contracts

./: .gitignore  :wq  Cargo.toml  README.md  deploy.sh  newdevdeploy.sh  package-lock.json  package.json  save_main.js  setupdevcfg.sh  updateSubContractConfig.sh
contract/: Cargo.toml
contract/src/: lib.rs
contract/tests/: integration_test.rs
contract2/: Cargo.toml  build.sh
contract2/neardev/: dev-account  dev-account.env
contract2/src/: lib.rs
contracts/: Cargo.toml
contracts/.cargo/: config.toml
contracts/explore_near_main/: Cargo.toml
contracts/explore_near_main/tests/sim/: new_main.rs
contracts/explore_near_main/tests/sim/utils/: mod.rs
contracts/explore_near_proxy/: Cargo.toml
contracts/explore_near_proxy/src/: lib.rs
contracts/explore_near_proxy/tests/sim/: explore_near_main.rs  first_tests.rs  main.rs  utils.rs
contracts/marvfirst_main/: Cargo.toml  build.sh
contracts/marvfirst_main/src/: lib.rs
contracts/marvfirst_main/tests/sim/: first_tests.rs  main.rs  new_main.rs  utils.rs
contracts/marvfirst_main/tests/sim/utils/: mod.rs
contracts/marvfirst_sub/: Cargo.toml  build.sh
contracts/marvfirst_sub/src/: lib.rs
contracts/marvfirst_sub/tests/sim/: first_tests.rs  main.rs  marvfirst_main.rs  utils.rs
contracts/marvfirst_sub/tests/sim/utils/: mod.rs
res/: marvfirst.wasm
src/: config.js  contract_names.js  engineering.js  index.html  lib.rs  main.js  storedLog.js  subacct_config.js  test-setup.js  test.js  test_environment.js
