[package]
name = "marvfirst_main"
version = "0.1.0"
authors = ["Marvin Mednick <mmednick@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.5"

[dependencies]
near-sdk = "4.0.0-pre.5"
serde = { version = "1.0", features = ['derive'] }

